Margins gaps fixed

--- a/css/card.css
+++ b/css/card.css
@@ -9,9 +9,8 @@
 .card {
   background-color: #04293A;
   padding: 20px;
-  margin-top: 20px;
+  margin-bottom: 20px;
   border-radius: 25px;
-  margin-bottom:20px;
 }
 
 /* Left column */
