--- a/css/header.css
+++ b/css/header.css
@@ -3,7 +3,6 @@
     padding: 20px;
     text-align: center;
     background: #04293A;
-    margin-top:20px;
     margin-bottom: 20px;
     border-radius: 25px;
   }
