--- a/css/topnav.css
+++ b/css/topnav.css
@@ -5,6 +5,7 @@
   overflow: hidden;
   background-color: #04293A;
   border-radius: 25px;
+  margin-bottom: 20px;
 }
 
 /* Style the topnav links */
